manifests/base/ingress/cd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cd-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "120s"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "120s"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "120s"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
spec:
  rules:
  - host: cd.sitecore
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cd
            port:
              number: 80
