manifests/base/ingress/id-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: id-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "32k"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: id.sitecore
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: id
            port:
              number: 80
